# rust-bandit-lang

./: .gitattributes  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Language.md  Markup.md  Plan.md  README.md
.github/workflows/: tests.yml
doc/: Language.md  Markup.md
editors/vscode/: .gitignore  .vscodeignore  README.md  install.sh  language-configuration.json  package.json  vsc-extension-quickstart.md
editors/vscode/syntaxes/: bandit-markdown-injection.json  bandit.tmLanguage.json
experiments/desugared-effects/: Cargo.toml
experiments/desugared-effects/src/: desugared.rs  lib.rs  main.rs
