[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Simon Bourne <simonbourne@gmail.com>"]

[profile.dev]
# Debug info isn't useful most of the time. It slows down builds and uses up disk space.
debug = 0

[workspace.dependencies]
chumsky = "1.0.0-alpha.6"
criterion = "0.5.1"
logos = "0.13.0"
num-bigint = "0.4.4"
xtask-base = { git = "https://github.com/simon-bourne/rust-xtask-base" }
derive_more = "0.99"
