[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Simon Bourne <simonbourne@gmail.com>"]

[profile.dev]
# Debug info isn't useful most of the time. It slows down builds and uses up disk space.
debug = 0

[workspace.dependencies]
bandit-parser = { path = "packages/parser" }

criterion = "0.5.1"
goldenfile = "1.7.1"
indoc = "2.0.4"
itertools = "0.12.1"
logos = "0.15.0"
xtask-base = { git = "https://github.com/simon-bourne/rust-xtask-base" }
pretty = "0.12.3"
