[workspace]
resolver = "3"
members = ["packages/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Simon Bourne <simonbourne@gmail.com>"]

[workspace.dependencies]
bandit-parser = { path = "packages/parser" }
bandit-types = { path = "packages/types" }

criterion = "0.5.1"
indoc = "2.0.4"
itertools = "0.12.1"
logos = "0.15.0"
xtask-base = { git = "https://github.com/simon-bourne/rust-xtask-base" }
pretty = "0.12.3"
winnow = "0.7"
katexit = "0.1.5"
